# cm

./: CMakeLists.txt  README.md
include/cm/: algorithm.hpp  constants.hpp  fwd.hpp  generic_ops.hpp  random.hpp  vec.hpp  vec_base.hpp  vec_ops.hpp
test/: CMakeLists.txt  algorithm.cpp  generic_ops.cpp  random.cpp  vec.cpp
